@startuml

hide methods
left to right direction

class Platform {
  -String designation
}

class Organization {
  -String designation
}

class Collaborator {
  -String name
  -String email
}

class User {
  -String name
  -String email
  -String password
}

class Freelancer {
  -String id
  -String name
  -String email
  -double NIF
  -String IBAN
  -double overallPayment
}

class PaymentTransaction {
  -String id
}

class Task {
  -String id
  -String briefDescription
  -Double timeDuration
  -Double costPerHour
  -String category
}

class TaskExecution {
  -Date deadline
  -Double delay
  -String descQualityWork
}

Platform "1" -- "*" Organization : has registered >
Platform "1" -- "*" Freelancer : has registered >
Platform "1" -- "*" User : has registered >

Organization "1" -- "1" Collaborator: has >
Organization "1" -- "*" PaymentTransaction : has >

Collaborator "0..1" -- "1" User : act as >
Collaborator "1" -- "*" Freelancer : registers >
Collaborator "1" -- "*" Task : creates >
Collaborator "1" -- "*" TaskExecution : creates >
Collaborator "1" -- "*" PaymentTransaction : does >

PaymentTransaction "*" -- "1" Freelancer : to >
PaymentTransaction "1" -- "1" Task : referent >

Task "1" -- "0..1" TaskExecution : has >

@enduml
